
* The CherryPy wsgiserver is now available at
  ``paste.script.wsgiserver`` (no longer requiring CherryPy to be
  installed)

* Added entry point for twisted server

* Made ``paste.script.pluginlib:egg_info_dir`` work with packages that
  put the ``Package.egg-info/`` directory in a subdirectory (typically
  ``src/``).

* Remove Cheetah requirement.  Packages using Cheetah templates should
  require Cheetah themselves.

* Make scripts work when there is no ``setup.py`` (if you aren't
  making a Python/setuptools package).

1.1
---

* Added a ``warn_returncode`` option to ``Command.run_command``, and
  make ``ensure_file`` use this for its svn command.

* If the svn command-line program isn't working for you, commands that
  use ``ensure_file`` will continue to work but just with a warning.

* Removed copyright notice that was accidentally included in new
  packages created by ``paster create``

* Allow variable assignments at the end of ``paster serve``, like
  ``paster serve http_port=80``; then you can use ``%(http_port)s`` in
  your config files (requires up-to-date Paste Deploy).

* Allow a ``package_dir`` variable so that you can put your package
  into subdirectories of the base directory (e.g., ``src/``)

* Changes to the ``twisted.web2`` wrapper (from pythy).

* Warn when you run ``paster setup-app`` and no modules are listed in
  ``top_level.txt`` (which can happen with a newly checked out
  project).

1.0
---

* Added entry point for CherryPy 3's WSGI server.

* Fixed ``paster serve`` to hide KeyboardInterrupt (CTRL-C) tracebacks
  in ``--reload`` mode.

* Added ``template_renderer`` argument to
  ``paste.script.copydir.copydir``.  This allows you to use arbitrary
  template languages, instead of just ``string.Template`` and Cheetah.

0.9.9
-----

* egg:PasteScript#test (the paste.script.testapp) now accepts ``lint``
  and ``text`` boolean configuration.  ``lint`` will turn on
  ``paste.lint`` validation.  ``text`` will cause it to return a